--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "camelcase": "^3.0.0",
     "dotenv": "^2.0.0",
     "express": "^4.13.4",
+    "mkdirp": "^0.5.1",
     "promise": "^7.1.1",
     "request": "^2.72.0"
   }
