--- a/.env-sample
+++ b/.env-sample
@@ -15,5 +15,7 @@ TEAR_DOWN_JOB=tear_down_pod
 TEAR_DOWN_SLACK_AUTH=
 TEAR_DOWN_TOKEN=
 
+LIST_POD_SLACK_AUTH=
+
 SLACK_BOT_TOKEN=
 SLACK_USER_CACHE=cache/slack-user.json
