--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "aws-sdk": "^2.4.6",
     "camelcase": "^3.0.0",
     "dotenv": "^2.0.0",
+    "es6-promisify": "^4.1.0",
     "express": "^4.13.4",
     "lodash": "^4.13.1",
     "mkdirp": "^0.5.1",
     "promise": "^7.1.1",
-    "request": "^2.72.0"
+    "request": "^2.72.0",
+    "sqlite3": "^3.1.4"
   }
 }
