--- a/.env-sample
+++ b/.env-sample
@@ -15,6 +15,9 @@ TEAR_DOWN_JOB=tear_down_pod
 TEAR_DOWN_SLACK_AUTH=
 TEAR_DOWN_TOKEN=
 
+TEAR_DOWN_V2_JOB=tear_down_pod_v2
+TEAR_DOWN_V2_TOKEN=
+
 LIST_POD_SLACK_AUTH=
 
 SLACK_BOT_TOKEN=
