--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.4.6",
+    "body-parser": "^1.15.2",
     "camelcase": "^3.0.0",
     "dotenv": "^2.0.0",
     "es6-promisify": "^4.1.0",
     "express": "^4.13.4",
+    "install": "^0.8.1",
     "lodash": "^4.13.1",
     "mkdirp": "^0.5.1",
     "promise": "^7.1.1",
